@@ -1,0 +1,41 @@
+/* XPM */
+static char *pixmap[] = {
+/* width height ncols cpp */
+"32 32 3 2",
+  /* Colors */
+  "00 c #000000",
+  "01 c #FF0000",
+  ".. s None c None",
+  "................................................................",
+  "..............01................................01..............",
+  "..............0101............................0101..............",
+  "..............010101........................010101..............",
+  "..............01010101....................01010101..............",
+  "..............0101010101................0101010101..............",
+  "..............010101010101............010101010101..............",
+  "..............01010101010101........01010101010101..............",
+  "..............0101000101010101......01010101010001..............",
+  "..............010001010101010101......010101010100..............",
+  "..............00010101010101010101......010101010100............",
+  "..............0000010101010101010101......0101010000............",
+  "............00000000010101010100000001......0100000000..........",
+  "............0000..0000010101000000000001....0000..0000..........",
+  "................0000000000000000000000000000000000..............",
+  "................0000..0000000000000000000000..0000..............",
+  "..................0100000000000000000000000000..................",
+  "................0000000000000000000000000000000000..............",
+  "..............00000101000000000000000000000001010000............",
+  "............000000000101000000000000000000010100000000..........",
+  "..........000001000001010101....010101010101010000010000........",
+  "........0000010101010101010101....010101010101010101010000......",
+  "....00000101010101010101010101......01010101010101010101010000..",
+  "....0000..............................010101010101010101010000..",
+  "........................................010101010101010101......",
+  "..........................................0101010101010101......",
+  "............................................01010101010101......",
+  "..............................................010101010101......",
+  "................................................0101010101......",
+  "..................................................01010101......",
+  "....................................................010101......",
+  "................................................................",
+};
