@@ -1,0 +1,45 @@
+/* XPM */
+static char *pixmap[] = {
+/* width height ncols cpp */
+"32 32 7 2",
+  /* Colors */
+  "00 c #000000",
+  "01 c #800000",
+  "02 c #C0C0C0",
+  "03 c #808080",
+  "04 c #FF0000",
+  "05 c #FFFFFF",
+  ".. s None c None",
+  "................................................................",
+  "................................................................",
+  "..........0303..........0301........0304..............03........",
+  "..........030303........040301....03030304........030303........",
+  "..........0303030303..0303030304010303030304..0303030303........",
+  "..........0303030303030303020303000303020303030303030303........",
+  "..........0303030303030303020303030303030303030303030303........",
+  "..........0303030303030303020303030303020303030303030303........",
+  "............0101000303030303030303030303030303010100............",
+  "..............01010303030303030303030303030303010101............",
+  "............0301010303030303030303030203030303010103............",
+  "..........03010101030303030300000003000303030301010103..........",
+  "........030101010101030300000000000000030303030301010103........",
+  "........020101010303030300000000000000000303020303010403........",
+  "......03010101040103030300000000000000000303..040401010103......",
+  "......010101030402..030300000000000000030303..050503010103......",
+  "....030101030304....030300030000000000030300..04040303010103....",
+  "....03010303..00....000303030000000000030302..04040303030103....",
+  "....030303..........0303030300000000030303..........03030303....",
+  "....030303..........0303030300000000030303............030303....",
+  "....0302............030303030303030303030303..........040103....",
+  "......04............030303030303030303030303............0103....",
+  "......04............030303030303030303030303............04......",
+  "....0401............030303030303030303030303............04......",
+  "....0000............0303030303030303030303..............04......",
+  "....................0303030303030303030303..............00......",
+  "......................030303030303030303........................",
+  "......................030303030303030303........................",
+  "......................0303030303030303..........................",
+  "................................................................",
+  "................................................................",
+  "................................................................",
+};
